# Cthulhu

./: .pre-commit-config.yaml  .travis.yml  README.md  SOCKETS_README.md  app_config.toml  auth_bruteforcer.py  filewriter_config.py  main.py  passgen_examples.py  password_generator.py  password_permuter.py  payload_profiles.yml  pyproject.toml  requirements.txt  setup.cfg
.docs/: DEVME.md  passgen_examples.py
.docs/trash/: async_test.py  auth_bruteforcer.py  doc_help.py  load_balancer.py  protocol_catalog.py  round_robin.py  ssh_bruteforcer.py  tasync.py  trash_prod_tcp_development.py  weighted_round_robin.py
.github/workflows/: python-app.yml
output/: ascii_lower_and_octdigit__1_3.txt  hexdigits__4_4.txt
src/: abstract_fabricator.py  abstract_generator.py  auth_bruteforcer.py  bruteforce_fabricator.py  bruteforce_generator.py  dictionary_generator.py  wordlist_fabricator.py
src/cli/: parser.py
src/conf/: app_client.py  app_config.py  app_load_balancer.py  app_logger.py  app_server.py  colors.py  filewriter.py  global_paths.py  path_manager.py
src/net/: __main__.py  banner.py  fmt.py  frame.py  logger.py  main.py  protocol_operation.py  tcp.py  trash.py  trash_dev_example_tcp_makefile.py  trash_tcp.py  util.py
src/passgen/: abstract_fabricator.py  auth_bruteforcer.py  bruteforce_fabricator.py  char_class.py  ssh_bruteforcer.py  util.py  wordlist_fabricator.py
src/utils/: exceptions.py  logger.py  logger_config.py  singleton.py
test/: test_bruteforce_fabricator.py  test_bruteforce_generator.py  test_dictionary_fabricator.py  test_dictionary_generator.py  test_global_paths.py  test_keyspace_constants.py  test_password_permuter.py
(+40 files in other folders)
