[tool.poetry]
name = "Cthulhu"
version = "0.5.0"
description = ""
authors = ["blue-hexagon <w0j8uhv5csio@opayq.net>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pygount = "^1.4.0"
taskipy = "^1.10.3"
pydantic = "^1.10.2"
mypy-extensions = "^0.4.3"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.docs
    | out
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[tool.taskipy.tasks]
pc = { cmd = "pre-commit run --all-files", help = "runs precommit on all files" }
test = { cmd = "pytest", help = "runs all tests" }
test-cov = { cmd = "pytest --cov", help = "runs all tests with coverage" }
test-cov-html = { cmd = "pytest --cov --cov-report html:coverage", help = "runs all tests with coverage and outputs a report found in ./coverage/index.html" }
loc = { cmd = "poetry run pygount ./src --format=summary --suffix=py", help = "Count LOC for the project" }
net = { cmd = "poetry run python ./src/net/main.py", help = "Run the net module" }
